# DiLightNet

./: .gitignore  README.md  VIDEO_README.md  gradio_app.py  infer_img.py  infer_vid.py  mesh_to_hints.py  neuraltexture_controlnet.py  pyproject.toml  requirements.txt  simple_run.py
data_gen/: render_3dmodels.py
demo/: img_gen.py  mesh_recon.py  relighting_gen.py  render_hints.py  rm_bg.py
train/: relighting_dataset.py  requirements.txt  train_controlnet.py
